[gd_scene load_steps=5 format=3 uid="uid://cnmfn8ut3as63"]

[ext_resource type="Script" path="res://src/name_direction.gd" id="1_v1nym"]
[ext_resource type="FontFile" uid="uid://chj6obe0ngdo3" path="res://assets/fonts/RampartOne-Regular.ttf" id="2_0panr"]
[ext_resource type="Theme" uid="uid://dikdrnxdfrbwd" path="res://src/themes/MainMenu.tres" id="3_e157f"]

[sub_resource type="LabelSettings" id="LabelSettings_lclri"]
line_spacing = -25.0
font = ExtResource("2_0panr")
font_size = 81
font_color = Color(0.243137, 0.243137, 0.243137, 1)

[node name="NameDirection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v1nym")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.964706, 0.905882, 0.756863, 1)

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Challenge" type="Label" parent="Layout"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
size_flags_stretch_ratio = 2.0
text = "->"
label_settings = SubResource("LabelSettings_lclri")

[node name="MarginContainer" type="MarginContainer" parent="Layout"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TopBtn" type="Button" parent="Layout/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_e157f")
theme_override_font_sizes/font_size = 30
text = "Esquerda"

[node name="BottomBtn" type="Button" parent="Layout/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_e157f")
theme_override_font_sizes/font_size = 30
text = "Direita"

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 13.0
grow_horizontal = 2
theme = ExtResource("3_e157f")
value = 70.0
show_percentage = false

[connection signal="pressed" from="Layout/MarginContainer/VBoxContainer/TopBtn" to="." method="_on_top_btn_pressed"]
[connection signal="pressed" from="Layout/MarginContainer/VBoxContainer/BottomBtn" to="." method="_on_bottom_btn_pressed"]
